logo overlapping issue fixed.

--- a/client/stylesheets/style.less
+++ b/client/stylesheets/style.less
@@ -444,6 +444,9 @@ li.admin {
 .name{
   text-transform: capitalize;
 }
+.brand-logo{
+  left: 105px;
+}
 .upload-btn-holder{
   .fileUpload {
     position: relative;
